# speedr

./: README.md  compute_dr.cpp  compute_dr.h  main.cpp  meson.build
subprojects/: cli11.wrap  highway.wrap
